--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,10 @@
 pluginManagement {
     repositories {
-        gradlePluginPortal()
+        mavenCentral()
 
         maven {url = "https://maven.fabricmc.net"}
         maven {url = "https://auoeke.jfrog.io/artifactory/maven"}
     }
 }
 
-rootProject.name = "narrator-off"
+rootProject.name = "noauth"
